# q2-long-reads-qc

./: .coveragerc  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: changelog.yaml  ci-dev.yaml  dependencies.yaml  dependent-issues.yaml  upload-coverage.yaml
conda-recipe/: meta.yaml
enviroment-files/: q2-long-reads-qc-qiime2-amplicon-2025.10.yml  q2-long-reads-qc-qiime2-moshpit-2025.10.yml  q2-long-reads-qc-qiime2-tiny-2025.10.yml
environment-files/: q2-long-reads-qc-qiime2-amplicon-2025.10.yml  q2-long-reads-qc-qiime2-amplicon-2026.1.yml  q2-long-reads-qc-qiime2-moshpit-2025.10.yml  q2-long-reads-qc-qiime2-moshpit-2026.1.yml  q2-long-reads-qc-qiime2-tiny-2025.10.yml  q2-long-reads-qc-qiime2-tiny-2026.1.yml  q2-long-reads-qc-rachis-amplicon-2026.4.yml  q2-long-reads-qc-rachis-amplicon-2026.7.yml  q2-long-reads-qc-rachis-moshpit-2026.4.yml  q2-long-reads-qc-rachis-moshpit-2026.7.yml  q2-long-reads-qc-rachis-tiny-2026.4.yml  q2-long-reads-qc-rachis-tiny-2026.7.yml
q2_16S_qc/: __init__.py  _version.py  aggregate_results.py  citations.bib  plugin_setup.py  quality_control.py  stats.py  trim.py
q2_16S_qc/tests/: test_quality_control.py
q2_16S_qc/types/: __init__.py
q2_long_reads_qc/: __init__.py  _params.py  _utils.py  _version.py  citations.bib  fastMultiQC_stats.py  nanoplot_stats.py  plugin_setup.py  trim_long_reads.py
q2_long_reads_qc/tests/: test_long_reads_qc.py  test_nanoplot_stats.py  test_quality_control.py  test_trim_long_reads.py  test_utils.py
(+4 files in other folders)
