[project]
name = "q2-long-reads-qc"
authors = [
    { name = "Christos Matzoros", email = "christosmatzoros@gmail.com" }
]
description = "QIIME2 plugin for quality control analysis of long-read sequences."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bokulich-lab/q2-long-reads-qc"
Repository = "https://github.com/bokulich-lab/q2-long-reads-qc"

[project.entry-points.'qiime2.plugins']
"q2-long-reads-qc" = "q2_long_reads_qc.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2_long_reads_qc/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_long_reads_qc*"]

[tool.setuptools.package-data]
q2_long_reads_qc = ["**/*"]